--- a/mathgame.html
+++ b/mathgame.html
@@ -54,6 +54,7 @@
     <button onclick="checkAnswer()" id="submitbutton">Submit Answer</button>
     <p id="timer">00:00</p>
     <p id="result"></p><a href="https://wa.me/27608910154" id="wa_link">0608910154</a></br>
+    <p id="more"> or click here to </p><a href="https://wa.me/27608910154" id="wa_sendtext_link">send WhatsApp with results</a></br>
     <button onclick="reset()" id="doneButton">Done</button>
 
 
@@ -70,7 +71,7 @@
     score = 0;
     questions = 0;
 
-    const timeAllowed = 10; // Timer in seconds
+    const timeAllowed = 5; // Timer in seconds
     const maxNumber = 100;   // Highest numbers for equations
 
     document.getElementById('answer').style.visibility="hidden";
@@ -80,16 +81,10 @@
 
     document.getElementById('result').style.visibility="hidden";
     document.getElementById('wa_link').style.visibility="hidden";
+    document.getElementById('more').style.visibility="hidden";
+    document.getElementById('wa_sendtext_link').style.visibility="hidden";
+
     document.getElementById('doneButton').style.visibility="hidden";
-
-    var t_minutes = Math.floor(timeAllowed / 60);
-    var t_seconds = timeAllowed % 60;
-
-    // Display the time in MM:SS format
-    var t_displayText = ('0' + t_minutes).slice(-2) + ':' + ('0' + t_seconds).slice(-2);
-    document.getElementById("timer").textContent = t_displayText;
-
-    //startTimer();
 
     function go(){
         // create a new `Date` object
@@ -99,7 +94,6 @@
         document.getElementById('answer').style.visibility='visible';
         document.getElementById('question').style.visibility="visible";
         document.getElementById('submitbutton').style.visibility='visible';
-        document.getElementById('timer').style.visibility="visible";
         startTimer();
         generateQuestion();
     }
@@ -115,6 +109,7 @@
             // Display the time in MM:SS format
             var displayText = ('0' + minutes).slice(-2) + ':' + ('0' + seconds).slice(-2);
             timerDisplay.textContent = displayText;
+            document.getElementById('timer').style.visibility="visible";
 
             duration--; // Decrease the duration by 1 second
             document.getElementById('answer').focus();
@@ -136,11 +131,17 @@
                 questions--;
 
                 //display results
-                const text = `${currentDateTime} Results: ${score} / ${questions}.\n Please take a screenshot of this result and WhatsApp to `;
+                const text = `${currentDateTime} Results: ${score} / ${questions}.`;
+                const msg = `${text}\n Please take a screenshot of this result and WhatsApp to `;
                 document.getElementById("result").textContent = text;
+                const wa_link = `https://wa.me/27608910154/?text=${text}`
+                document.getElementById("wa_sendtext_link").href = wa_link;
 
                 document.getElementById('result').style.visibility="visible";
                 document.getElementById('wa_link').style.visibility="visible";
+                document.getElementById('more').style.visibility="visible";
+                document.getElementById('wa_sendtext_link').style.visibility="visible";
+
                 document.getElementById('doneButton').style.visibility="visible";
                 //alert(text);
                 questions = 0;
@@ -167,8 +168,11 @@
         document.getElementById('gobutton').style.visibility='visible';
         document.getElementById('result').style.visibility="hidden";
         document.getElementById('wa_link').style.visibility="hidden";
+        document.getElementById('more').style.visibility="hidden";
+        document.getElementById('wa_sendtext_link').style.visibility="hidden";
+
         document.getElementById('doneButton').style.visibility="hidden";
-        document.getElementById('timer').style.visibility="visible";
+        document.getElementById('timer').style.visibility="hidden";
 
 
     }
