--- a/mathgame.html
+++ b/mathgame.html
@@ -8,7 +8,10 @@
     body {
         font-family: Arial, sans-serif;
         text-align: center;
-        background-image: url('math4.jpeg');
+        background-image: url('page03.jpg');
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
+        min-height: 100vh;
         color: #ffffff;
     }
 
@@ -53,7 +56,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Math Maniac</h1>
+    <h1></br></h1>
     <div id="question"></div>
     <input type="text" id="answer" placeholder="Enter your answer">
     <button onclick="checkAnswer()" id="submitbutton">Submit Answer</button>
@@ -62,7 +65,6 @@
     <p id="result"></p><a href="https://wa.me/27608910154" id="wa_link">0608910154</a></br>
     <p id="more"> or click here to </p><a href="https://wa.me/27608910154" id="wa_sendtext_link">send WhatsApp with results</a></br>
     <button onclick="reset()" id="doneButton">Done</button>
-    
 </div>
 
 <script>
