more background updates

--- a/mathgame.html
+++ b/mathgame.html
@@ -8,11 +8,12 @@
     body {
         font-family: Arial, sans-serif;
         text-align: center;
-        background-image: url('page03.jpg');
+        background-image: url('page05.jpg');
         background-repeat: no-repeat;
         background-size: 100% 100%;
         min-height: 100vh;
-        color: #ffffff;
+        //color: #ffffff; //White
+        color: #333;      //Black
     }
 
     h1 {
@@ -97,7 +98,7 @@
         // create a new `Date` object
         done = 0;
         start = new Date();
-        document.body.style.backgroundImage = "url('math3.jpg')";
+        document.body.style.backgroundImage = "url('page06.jpg')";
         document.getElementById('gobutton').style.visibility='hidden';
         document.getElementById('answer').style.visibility='visible';
         document.getElementById('question').style.visibility="visible";
@@ -182,7 +183,7 @@
         document.getElementById('doneButton').style.visibility="hidden";
         document.getElementById('timer').style.visibility="hidden";
 
-        document.body.style.backgroundImage = "url('math2.webp')";
+        document.body.style.backgroundImage = "url('page05.jpg')";
 
     }
 
