--- a/mathgame.html
+++ b/mathgame.html
@@ -140,6 +140,7 @@
                 questions--;
 
                 //display results
+                document.body.style.backgroundImage = "url('page05.jpg')";
                 const text = `${currentDateTime} Results: ${score} / ${questions}.`;
                 const msg = `${text}\n Please take a screenshot of this result and WhatsApp to `;
                 document.getElementById("result").textContent = msg;
