--- a/mathgame.html
+++ b/mathgame.html
@@ -62,7 +62,7 @@
     <input type="text" id="answer" placeholder="Enter your answer">
     <button onclick="checkAnswer()" id="submitbutton">Submit Answer</button>
     <p id="timer">00:00</p>
-    <button onclick="go()" id="gobutton">Level 1</br>Max number 30</button>  <button onclick="go2()" id="go2button">Level 2</br>Max number 100</button>
+    <button onclick="go3()" id="gobutton">Level 1</br>Max number 5</button> <button onclick="go()" id="gobutton">Level 2</br>Max number 30</button>  <button onclick="go2()" id="go2button">Level 3</br>Max number 100</button>
     <p id="result"></p><a href="https://wa.me/27608910154" id="wa_link">0608910154</a></br>
     <p id="more"> or click here to </p><a href="https://wa.me/27608910154" id="wa_sendtext_link">send WhatsApp with results</a></br>
     <button onclick="reset()" id="doneButton">Done</button>
@@ -109,6 +109,21 @@
         generateQuestion();
     }
 
+        function go3(){
+        // create a new `Date` object
+        done = 0;
+        maxNumber = 5; // Highest numbers for equations
+        start = new Date();
+        document.body.style.backgroundImage = "url('page06.jpg')";
+        document.getElementById('gobutton').style.visibility='hidden';
+        document.getElementById('go2button').style.visibility='hidden';
+        document.getElementById('answer').style.visibility='visible';
+        document.getElementById('question').style.visibility="visible";
+        document.getElementById('submitbutton').style.visibility='visible';
+        startTimer();
+        generateQuestion();
+    }
+    
     function go(){
         // create a new `Date` object
         done = 0;
@@ -159,15 +174,15 @@
                 //display results
                 document.body.style.backgroundImage = "url('page05.jpg')";
                 const text = `${currentDateTime} Results: ${score} / ${questions}.`;
-                const msg = `${text}\n Please take a screenshot of this result and WhatsApp to `;
+                //const msg = `${text}\n Please take a screenshot of this result and WhatsApp to `;
                 document.getElementById("result").textContent = msg;
-                const wa_link = `https://wa.me/27608910154/?text=${text}`
-                document.getElementById("wa_sendtext_link").href = wa_link;
+                //const wa_link = `https://wa.me/27608910154/?text=${text}`
+                //document.getElementById("wa_sendtext_link").href = wa_link;
 
                 document.getElementById('result').style.visibility="visible";
-                document.getElementById('wa_link').style.visibility="visible";
-                document.getElementById('more').style.visibility="visible";
-                document.getElementById('wa_sendtext_link').style.visibility="visible";
+                //document.getElementById('wa_link').style.visibility="visible";
+                //document.getElementById('more').style.visibility="visible";
+                //document.getElementById('wa_sendtext_link').style.visibility="visible";
 
                 document.getElementById('doneButton').style.visibility="visible";
                 //alert(text);
