--- a/mathgame.html
+++ b/mathgame.html
@@ -62,7 +62,7 @@
     <input type="text" id="answer" placeholder="Enter your answer">
     <button onclick="checkAnswer()" id="submitbutton">Submit Answer</button>
     <p id="timer">00:00</p>
-    <button onclick="go3()" id="gobutton">Level 1</br>Max number 5</button> <button onclick="go()" id="gobutton">Level 2</br>Max number 30</button>  <button onclick="go2()" id="go2button">Level 3</br>Max number 100</button>
+    <button onclick="go3()" id="go3button">Level 1</br>Max number 5</button> <button onclick="go()" id="gobutton">Level 2</br>Max number 30</button>  <button onclick="go2()" id="go2button">Level 3</br>Max number 100</button>
     <p id="result"></p><a href="https://wa.me/27608910154" id="wa_link">0608910154</a></br>
     <p id="more"> or click here to </p><a href="https://wa.me/27608910154" id="wa_sendtext_link">send WhatsApp with results</a></br>
     <button onclick="reset()" id="doneButton">Done</button>
@@ -79,7 +79,7 @@
     score = 0;
     questions = 0;
 
-    const timeAllowed = 120; // Timer in seconds
+    const timeAllowed = 30; // Timer in seconds
     let maxNumber;
 
     document.getElementById('answer').style.visibility="hidden";
@@ -102,6 +102,7 @@
         document.body.style.backgroundImage = "url('page06.jpg')";
         document.getElementById('gobutton').style.visibility='hidden';
         document.getElementById('go2button').style.visibility='hidden';
+        document.getElementById('go3button').style.visibility='hidden';
         document.getElementById('answer').style.visibility='visible';
         document.getElementById('question').style.visibility="visible";
         document.getElementById('submitbutton').style.visibility='visible';
@@ -117,6 +118,7 @@
         document.body.style.backgroundImage = "url('page06.jpg')";
         document.getElementById('gobutton').style.visibility='hidden';
         document.getElementById('go2button').style.visibility='hidden';
+        document.getElementById('go3button').style.visibility='hidden';
         document.getElementById('answer').style.visibility='visible';
         document.getElementById('question').style.visibility="visible";
         document.getElementById('submitbutton').style.visibility='visible';
@@ -132,6 +134,7 @@
         document.body.style.backgroundImage = "url('page06.jpg')";
         document.getElementById('gobutton').style.visibility='hidden';
         document.getElementById('go2button').style.visibility='hidden';
+        document.getElementById('go3button').style.visibility='hidden';
         document.getElementById('answer').style.visibility='visible';
         document.getElementById('question').style.visibility="visible";
         document.getElementById('submitbutton').style.visibility='visible';
@@ -209,6 +212,7 @@
 
         document.getElementById('gobutton').style.visibility='visible';
         document.getElementById('go2button').style.visibility='visible';
+        document.getElementById('go3button').style.visibility='visible';
         document.getElementById('result').style.visibility="hidden";
         document.getElementById('wa_link').style.visibility="hidden";
         document.getElementById('more').style.visibility="hidden";
